[gd_scene load_steps=5 format=3 uid="uid://bwbm8ftgxtwma"]

[ext_resource type="Script" uid="uid://qpe6h30h7oxq" path="res://overworld/party_comp/party_comp.gd" id="1_2gams"]
[ext_resource type="Script" uid="uid://do7ou2t2cnoup" path="res://overworld/party_comp/droppable.gd" id="2_dynxh"]
[ext_resource type="Script" uid="uid://d3grc03j4eh61" path="res://overworld/party_comp/max_num.gd" id="3_o86wr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85k4d"]
size = Vector2(1143, 249)

[node name="PartyComp" type="Node2D"]
script = ExtResource("1_2gams")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.5
offset_right = 160.5
offset_bottom = 51.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Party Management"

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -90.0
offset_right = 247.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_font_sizes/font_size = 45
text = "Save and Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(571, 326)

[node name="CurrParty" type="Area2D" parent="."]
position = Vector2(0, 3)
script = ExtResource("2_dynxh")
is_current_member = true
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="CurrParty"]
visible = false
offset_left = 6.0
offset_top = 49.0
offset_right = 1146.0
offset_bottom = 297.0
color = Color(0, 0, 0, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CurrParty"]
position = Vector2(576.5, 172.5)
shape = SubResource("RectangleShape2D_85k4d")

[node name="Marker2D" type="Marker2D" parent="CurrParty"]
position = Vector2(578, 175)

[node name="Label" type="Label" parent="CurrParty"]
offset_left = 18.0
offset_top = 55.0
offset_right = 262.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 50
text = "Party Members"

[node name="MaxNum" type="Label" parent="CurrParty"]
offset_left = 897.0
offset_top = 234.0
offset_right = 1141.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 40
text = "Max Members:"
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("3_o86wr")

[node name="Reserves" type="Area2D" parent="."]
position = Vector2(1, 335)
script = ExtResource("2_dynxh")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Reserves"]
visible = false
offset_left = 6.0
offset_top = 28.0
offset_right = 1146.0
offset_bottom = 276.0
color = Color(0.087, 0.087, 0.087, 0.45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reserves"]
position = Vector2(576.5, 150.5)
shape = SubResource("RectangleShape2D_85k4d")

[node name="Marker2D" type="Marker2D" parent="Reserves"]
position = Vector2(574, 177)

[node name="Label" type="Label" parent="Reserves"]
offset_left = 17.0
offset_top = 35.0
offset_right = 261.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 50
text = "Reserves"

[node name="MemberFolder" type="Node2D" parent="."]

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="CurrParty" to="CurrParty" method="_on_area_entered"]
[connection signal="area_exited" from="CurrParty" to="CurrParty" method="_on_area_exited"]
[connection signal="area_entered" from="Reserves" to="Reserves" method="_on_area_entered"]
[connection signal="area_exited" from="Reserves" to="Reserves" method="_on_area_exited"]
